main: fix email address contrast

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -388,12 +388,16 @@ body {
 		width: 100%;
 
 		a {
-			color: #fdfdff;
+			color: #fff;
 			text-decoration: none;
 		}
 
 		a:hover {
 			text-decoration: underline;
+		}
+
+		.email-link {
+			color: #fdfdff;
 		}
 	}
 
